--- a/templates/front/articles.html
+++ b/templates/front/articles.html
@@ -8,7 +8,7 @@
 	<body>
 		<div class="container">
 			<header>
-				<h1 class="header-text">{{PageTitle}}</h1>
+				<h1 id="header-text">{{PageTitle}}</h1>
 			</header>
 
 			{{template "front/navigation" .}}
