--- a/templates/admin/head.html
+++ b/templates/admin/head.html
@@ -7,7 +7,7 @@
 		<title>{{PageTitle}} | Administration</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<link rel="stylesheet" href="/assets/css/master.css">
-		<link rel="icon" href="/assets/favicon.ico" type="image/vnd.microsoft.icon">
+		<link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
     </head>
 
 <body>
