--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -21,7 +21,7 @@ html {
   	;
 }
 
-@media screen and (max-width: 32em) {
+@media screen and (max-width: 39em) {
 	.container {
 		grid-template-areas: 	"header"
 								"nav"
@@ -29,7 +29,7 @@ html {
 								"sidebar";
 		grid-template-columns: 100%;
 		grid-template-rows:
-							auto
+							80px
 							auto
 							minmax(30px, auto)
 							auto
@@ -42,7 +42,7 @@ html {
 	height: 100vh;
 	display: grid;
 	grid-template-rows: 80px 1fr 30px;
-	grid-template-columns: 20% 30% 35% 15%;
+	grid-template-columns: minmax(250px, 20%) 30% 35% 15%;
 	grid-template-areas:
 		"header header header header"
 		"nav content content ."
@@ -58,7 +58,7 @@ html {
 								"footer";
 		grid-template-columns: 100%;
 		justify-content: stretch;
-		grid-template-rows:	auto
+		grid-template-rows:	80px
 							auto
 						   	auto
 						   	auto;
