--- a/templates/admin/article_edit.html
+++ b/templates/admin/article_edit.html
@@ -10,6 +10,15 @@
 
 	{{with .article}}
 		<form action="/admin/article/edit/{{.ID}}" method="post">
+			<label for="category">Category</label>
+			
+			<select name="categoryID">
+				<option></option>
+				{{range .categories}}
+				<option value="{{.ID}}">{{.Name}}</option>
+				{{end}}
+			</select>
+
 			<label for="headline">Headline</label>
 			<input type="text" value="{{.Headline}}" id="headline" name="headline" placeholder="Headline..." required>
 
