--- a/templates/admin/site_edit.html
+++ b/templates/admin/site_edit.html
@@ -25,6 +25,34 @@
 			</div>
 		</form>
 	{{end}}
+	
+	<div id="upload-error" style="margin-top: 10px; display:none" class="alert alert-danger" role="status"></div>
+
+	<form enctype="multipart/form-data" method="post" id="direct-upload">
+		<label for="file">Upload file</label>
+		<input type="file" id="file" name="file" placeholder="Choose a file" required>
+
+		{{ .csrfField }}
+
+		<div class="button-group">
+			<button name="action" value="upload">Upload</button>
+		</div>
+	</form>
+
+	<table id="uploaded-files" class="table" style="display:none">
+		<thead>
+			<tr>
+				<th>Filename</th>
+				<th>Link</th>
+				<th>ContentType</th>
+				<th>Size</th>
+			</tr>
+		</thead>
+
+		<tbody>
+
+		</tbody>
+	</table>
 </main>
 {{template "admin/footer" .}}
 {{end}}
