--- a/templates/admin/head.html
+++ b/templates/admin/head.html
@@ -4,8 +4,8 @@
 <html{{if Language}} lang="{{Language}}"{{end}}>
     <head>
 		<meta charset="UTF-8">
+		<meta name="csrfToken" content="{{.CSRFToken}}">
 		<title>{{PageTitle}} | Administration</title>
-		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<link rel="stylesheet" href="/assets/css/master.css">
 		<link rel="icon" href="/favicon.ico" type="image/vnd.microsoft.icon">
     </head>
