no navigation elements for password reset form

--- a/templates/admin/forgot_password.html
+++ b/templates/admin/forgot_password.html
@@ -1,13 +1,25 @@
 {{define "admin/forgot_password"}}
 
-{{template "admin/head" .}}
+    <head>
+		<meta charset="UTF-8">
+		<title>{{PageTitle}} | Administration</title>
+		<meta name="viewport" content="width=device-width,initial-scale=1.0">
+		<link rel="stylesheet" href="/assets/css/master.css">
+		<link rel="icon" href="/assets/favicon.ico" type="image/vnd.microsoft.icon">
+    </head>
+
 <body>
-	<main>
-		<form action="/admin/forgot-password" method="POST">
+	<div class="container-admin">
+		<header>
+			<h1 id="header-text">{{PageTitle}} | Administration</h1>
+		</header>
+		
+		<main>
+			<form action="/admin/forgot-password" method="POST">
 				<h2>Password reset</h2>
-
+	
 				{{template "skel/flash" .}}
-
+	
 				<label for="email">Email</label>
 				<input type="email" required="required" name="email" id="email" value="{{.user.Email}}" placeholder="Email...">
 
@@ -16,9 +28,9 @@
 				<div class="button-group">
 					<input type="submit" value="Send reset instruction">
 				</div>
-			</div>
-		</form>
-	</main>
+			</form>
+		</main>
+	</div>
 </body>
 </html>
 {{end}}
