--- a/templates/admin/reset_password.html
+++ b/templates/admin/reset_password.html
@@ -1,25 +1,43 @@
 {{define "admin/reset_password"}}
 
-{{template "admin/head"}}
-	<main>
-		<form action="/admin/reset-password/{{.hash}}" method="POST">
-			<h2>Password reset</h2>
 
-			{{template "skel/flash" .}}
+<!DOCTYPE html>
 
-			<label for="password">Password</label>
-			<input type="password" required="required" autocomplete="off" name="password" id="password" placeholder="Password...">
+<html{{if Language}} lang="{{Language}}"{{end}}>
+    <head>
+		<meta charset="UTF-8">
+		<title>{{PageTitle}} | Administration</title>
+		<meta name="viewport" content="width=device-width,initial-scale=1.0">
+		<link rel="stylesheet" href="/assets/css/master.css">
+		<link rel="icon" href="/assets/favicon.ico" type="image/vnd.microsoft.icon">
+    </head>
 
-			<label for="password_repeat">Re-enter password</label>
-			<input type="password" required="required" autocomplete="off" name="password_repeat" id="password_repeat" placeholder="Re-enter password...">
+<body>
+	<div class="container-admin">
+		<header>
+			<h1 id="header-text">{{PageTitle}} | Administration</h1>
+		</header>
+		
+		<main>
+			<form action="/admin/reset-password/{{.hash}}" method="POST">
+				<h2>Password reset</h2>
 
-			{{ .csrfField }}
+				{{template "skel/flash" .}}
 
-			<div class="button-group">
-				<input type="submit" value="Save new password">
-			</div>
-		</form>
-	</main>
+				<label for="password">Password</label>
+				<input type="password" required="required" autocomplete="off" name="password" id="password" placeholder="Password...">
+
+				<label for="password_repeat">Re-enter password</label>
+				<input type="password" required="required" autocomplete="off" name="password_repeat" id="password_repeat" placeholder="Re-enter password...">
+
+				{{ .csrfField }}
+
+				<div class="button-group">
+					<input type="submit" value="Save new password">
+				</div>
+			</form>
+		</main>
+	</div>
 </body>
 </html>
 {{end}}
