--- a/templates/admin/file_upload.html
+++ b/templates/admin/file_upload.html
@@ -10,6 +10,10 @@
 	<form enctype="multipart/form-data" action="/admin/file/upload" method="post">
 		<label for="file">File</label>
 		<input type="file" id="file" name="file" placeholder="Choose a file" required>
+		
+    <div class="checkbox">
+			<label><input type="checkbox" id="inline" name="inline" value="on"{{if .Inline}} checked{{end}}>Inline?</label>
+		</div>
 
 		{{ .csrfField }}
 
