inline / try to force download on file view

--- a/templates/admin/file_upload.html
+++ b/templates/admin/file_upload.html
@@ -12,7 +12,7 @@
 		<input type="file" id="file" name="file" placeholder="Choose a file" required>
 		
     <div class="checkbox">
-			<label><input type="checkbox" id="inline" name="inline" value="on"{{if .Inline}} checked{{end}}>Inline?</label>
+			<label><input type="checkbox" id="inline" name="inline" value="off"{{if .Inline}} checked{{end}}>Inline?</label>
 		</div>
 
 		{{ .csrfField }}
