--- a/templates/admin/files.html
+++ b/templates/admin/files.html
@@ -13,7 +13,7 @@
 		<thead>
 			<tr>
 				<th>Last modified</th>
-				<th>Link</th>
+				<th width="30%">Link</th>
 				<th>ContentType</th>
 				<th>Inline</th>
 				<th>Size</th>
@@ -42,10 +42,10 @@
 									Inline
 								</button>
 								{{end}}
-							
+
 								{{$.csrfField}}
 						</form>
-						
+
 						<a href="/file/{{.UniqueName}}" title="Show file">Show file</a>
 
 						<a href="/admin/file/delete/{{.ID}}" title="Remove">Remove</a>
