--- a/templates/admin/sites.html
+++ b/templates/admin/sites.html
@@ -17,6 +17,7 @@
 				<th>Published on</th>
 				<th>Title</th>
 				<th>Link</th>
+				<th>Section</th>
 				<th>Author</th>
 				<th>Last modified</th>
 				<th>Actions</th>
@@ -30,6 +31,7 @@
 					<td>{{.PublishedOn | FormatNilDate}}</td>
 					<td>{{.Title}}</td>
 					<td>{{.Link}}</td>
+					<td>{{.Section}}</td>
 					<td>{{.Author.Username}}</td>
 					<td>{{.LastModified | FormatDateTime}}</td>
 					<td class="action-data">
