--- a/templates/front/navigation.html
+++ b/templates/front/navigation.html
@@ -4,16 +4,18 @@
 			<li>
 				<a{{if eq .active "articles"}} class="active"{{end}} href="/">Articles</a>
 			</li>
-	
+
 			<li>
 				<a{{if eq .active "index"}} class="active"{{end}} href="/index">Index</a>
 			</li>
 
 		{{$sites := GetSites}}
 		{{range $key, $value := $sites}}
+      {{if eq .Section "navigation"}}
 			<li>
 				<a{{if $.site}}{{if eq $.site.Link .Link}} class="active"{{end}}{{end}} href="{{.LinkEscape}}">{{.Title}}</a>
 			</li>
+      {{end}}
 		{{end}}
 		</ul>
 	</nav>
