--- a/templates/admin/site_edit.html
+++ b/templates/admin/site_edit.html
@@ -14,6 +14,12 @@
 			<label for="headline">Link</label>
 			<input type="text" value="{{.Link}}" id="link" name="link" placeholder="Link..." required>
 
+			<label for="section">Section</label>
+			<select name="section">
+				<option value="navigation"{{if .Section}}{{if eq .Section "navigation"}} selected="selected"{{end}}{{end}}>Navigation</option>
+				<option value="footer"{{if .Section}}{{if eq .Section "footer"}} selected="selected"{{end}}{{end}}>Footer</option>
+			</select>
+
 			<label for="content">Content</label>
 			<textarea rows="25" id="content" name="content">{{.Content}}</textarea>
 
